[gd_scene load_steps=3 format=2]

[ext_resource path="res://PVP.gd" type="Script" id=1]
[ext_resource path="res://TTTButton.tscn" type="PackedScene" id=2]

[node name="PVP" type="Node"]
script = ExtResource( 1 )

[node name="Board" type="Node2D" parent="."]
editor/display_folded = true

[node name="ColorRect" type="ColorRect" parent="Board"]
margin_left = 232.0
margin_top = 13.0
margin_right = 250.0
margin_bottom = 291.0
rect_pivot_offset = Vector2( 10.5204, 168.568 )

[node name="ColorRect4" type="ColorRect" parent="Board"]
margin_left = 269.0
margin_top = -71.0
margin_right = 287.0
margin_bottom = 229.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 10.5204, 168.568 )

[node name="ColorRect5" type="ColorRect" parent="Board"]
margin_left = 271.0
margin_top = 36.0
margin_right = 289.0
margin_bottom = 338.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 10.5204, 168.568 )

[node name="ColorRect2" type="ColorRect" parent="Board"]
margin_left = 342.0
margin_top = 14.0
margin_right = 360.0
margin_bottom = 291.0
rect_pivot_offset = Vector2( 10.5204, 168.568 )

[node name="TTTButton1" parent="." instance=ExtResource( 2 )]
margin_left = 156.0
margin_top = 19.0
margin_right = 224.0
margin_bottom = 81.0
row = 0
col = 0

[node name="TTTButton2" parent="." instance=ExtResource( 2 )]
margin_left = 264.0
margin_top = 20.0
margin_right = 332.0
margin_bottom = 82.0
row = 0
col = 1

[node name="TTTButton3" parent="." instance=ExtResource( 2 )]
margin_left = 370.0
margin_top = 19.0
margin_right = 438.0
margin_bottom = 81.0
row = 0
col = 2

[node name="TTTButton4" parent="." instance=ExtResource( 2 )]
margin_left = 153.0
margin_top = 119.0
margin_right = 221.0
margin_bottom = 181.0
row = 1
col = 0

[node name="TTTButton5" parent="." instance=ExtResource( 2 )]
margin_left = 263.0
margin_top = 120.0
margin_right = 331.0
margin_bottom = 182.0
row = 1
col = 1

[node name="TTTButton6" parent="." instance=ExtResource( 2 )]
margin_left = 375.0
margin_top = 120.0
margin_right = 443.0
margin_bottom = 182.0
row = 1
col = 2

[node name="TTTButton7" parent="." instance=ExtResource( 2 )]
margin_left = 156.0
margin_top = 222.0
margin_right = 224.0
margin_bottom = 284.0
row = 2
col = 0

[node name="TTTButton8" parent="." instance=ExtResource( 2 )]
margin_left = 260.0
margin_top = 222.0
margin_right = 328.0
margin_bottom = 284.0
row = 2
col = 1

[node name="TTTButton9" parent="." instance=ExtResource( 2 )]
margin_left = 369.0
margin_top = 222.0
margin_right = 437.0
margin_bottom = 284.0
row = 2
col = 2

[node name="Dialog" type="AcceptDialog" parent="."]
margin_right = 175.0
margin_bottom = 107.0
window_title = "Tic Tac Toe"

[node name="Score" type="Label" parent="."]
margin_left = 5.97079
margin_top = 4.64394
margin_right = 92.9708
margin_bottom = 52.6439
text = "Score
X  :
O :"
uppercase = true

[node name="XScore" type="Label" parent="."]
margin_left = 30.0
margin_top = 23.0
margin_right = 73.0
margin_bottom = 37.0
text = "0"
uppercase = true

[node name="OScore" type="Label" parent="."]
margin_left = 30.0
margin_top = 40.0
margin_right = 72.0
margin_bottom = 54.0
text = "0"
uppercase = true

[node name="MenuButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -52.0
margin_bottom = 30.0
hint_tooltip = "Exit to Main Menu"
text = "Menu"
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
